--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,29 @@
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 body {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  background-color: antiquewhite; }
-  body header {
-    position: relative; }
-    body header h1 {
-      text-align: center;
-      font-size: 70px;
-      margin: 100px 0; }
-    body header #navbabar {
-      position: absolute;
-      top: 150px;
-      left: 50px;
-      width: 75px;
-      height: 200px;
-      display: flex;
-      flex-direction: column;
-      background-color: rgba(37, 37, 37, 0.7); }
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  background-color: antiquewhite;
+}
+body header {
+  position: relative;
+}
+body header h1 {
+  text-align: center;
+  font-size: 70px;
+  margin: 100px 0;
+}
+body header #navbabar {
+  position: absolute;
+  top: 150px;
+  left: 50px;
+  width: 75px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(37, 37, 37, 0.7);
+}
 
 /*# sourceMappingURL=style.css.map */
