--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,7 @@ body {
             text-align: center;
             font-size: 70px;
             margin: 100px 0;
+            // color: orangered;
         }
         #navbabar {
             position: absolute;
